--- a/AdaogAlyssaDreamTeam/miniproject/client/makefile
+++ b/AdaogAlyssaDreamTeam/miniproject/client/makefile
@@ -1,10 +1,21 @@
-obj-m := mymodule.o
-
-KERNELDIR := /home/student/Desktop/ex10/buildroot-avr32-v3.0.0_TTK4147/output/build/linux-2.6.35.4
-CROSS := /home/student/Desktop/ex10/buildroot-avr32-v3.0.0_TTK4147/output/staging/usr/bin/avr32-linux-
-
-all:
-	make ARCH=avr32 CROSS_COMPILE=$(CROSS) -C $(KERNELDIR) M=$(shell pwd) modules
-    
-clean:
-	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions
+# program executable name 
+TARGET = mainprog
+# compiler flags 
+CFLAGS = -g -Wall
+# linker flags 
+LDFLAGS = -g -pthread 
+# list of sources 
+SOURCES = $(shell find -name "*.c") 
+# default rule, to compile everything 
+all: $(TARGET) 
+# define object files 
+OBJECTS = $(SOURCES:.c=.o) 
+# link programs 
+$(TARGET): $(OBJECTS) 
+	gcc $(LDFLAGS) -o $@ $^ 
+# compile 
+%.o : %.c 
+	gcc $(CFLAGS) -c -o $@ $< 
+# cleaning 
+clean: 
+	rm -f $(TARGET) $(OBJECTS) 
